Fix TOC now that num:t is gone

--- a/slides.org
+++ b/slides.org
@@ -54,87 +54,87 @@
 #+BEAMER_HEADER: \setminted[racket]{escapeinside=||,bgcolor=LightGray,beameroverlays=true,baselinestretch=1.2,fontsize=\scriptsize}
 #+BEAMER_HEADER: \setminted[c++]{escapeinside=||,bgcolor=LightGray,beameroverlays=true,baselinestretch=1.2,fontsize=\scriptsize}
 
-* Contents :TOC_2_githubnums:
-- [[#introduction-1][Introduction]]
-  - [[#course-overview-1][Course Overview]]
-  - [[#motivation-functional-programming-1][Motivation: Functional Programming]]
-  - [[#motivation-interpreters-1][Motivation: Interpreters]]
-- [[#functional-programming-1-recursion-and-immutable-data-1][Functional Programming 1: Recursion and Immutable Data]]
-  - [[#programming-in-cs-350-1][Programming in CS 350]]
-  - [[#racket-1][Racket]]
-  - [[#plait-1][Plait]]
-  - [[#functional-thinking-and-recursion-1][Functional Thinking and Recursion]]
-  - [[#unbounded-data-lists-1][Unbounded Data: Lists]]
-- [[#functional-programming-2-defining-data-types-1][Functional Programming 2: Defining Data Types]]
-  - [[#warmup-pairs-1][Warmup: Pairs]]
-  - [[#algebraic-data-types-1][Algebraic Data Types]]
-  - [[#recursive-data-1][Recursive Data]]
-- [[#abstract-syntax-and-parsing-1][Abstract Syntax and Parsing]]
-  - [[#the-big-picture-1][The Big Picture]]
-  - [[#describing-syntax-1][Describing Syntax]]
-  - [[#parsing-and-abstract-syntax-1][Parsing and Abstract Syntax]]
-- [[#arithmetic-our-first-interpreter-1][Arithmetic: Our First Interpreter]]
-  - [[#interpreters-overview-1][Interpreters: Overview]]
-- [[#desugaring-our-first-elaborator-1][Desugaring: Our First Elaborator]]
-  - [[#syntactic-sugar-1][Syntactic Sugar]]
-- [[#functions-variables-and-substitution-1][Functions, Variables and Substitution]]
-  - [[#overview-functions-1][Overview: Functions]]
-- [[#review-1][Review]]
+* Contents :TOC_2_gh:
+- [[#introduction][Introduction]]
+  - [[#course-overview][Course Overview]]
+  - [[#motivation-functional-programming][Motivation: Functional Programming]]
+  - [[#motivation-interpreters][Motivation: Interpreters]]
+- [[#functional-programming-1-recursion-and-immutable-data][Functional Programming 1: Recursion and Immutable Data]]
+  - [[#programming-in-cs-350][Programming in CS 350]]
+  - [[#racket][Racket]]
+  - [[#plait][Plait]]
+  - [[#functional-thinking-and-recursion][Functional Thinking and Recursion]]
+  - [[#unbounded-data-lists][Unbounded Data: Lists]]
+- [[#functional-programming-2-defining-data-types][Functional Programming 2: Defining Data Types]]
+  - [[#warmup-pairs][Warmup: Pairs]]
+  - [[#algebraic-data-types][Algebraic Data Types]]
+  - [[#recursive-data][Recursive Data]]
+- [[#abstract-syntax-and-parsing][Abstract Syntax and Parsing]]
+  - [[#the-big-picture][The Big Picture]]
+  - [[#describing-syntax][Describing Syntax]]
+  - [[#parsing-and-abstract-syntax][Parsing and Abstract Syntax]]
+- [[#arithmetic-our-first-interpreter][Arithmetic: Our First Interpreter]]
+  - [[#interpreters-overview][Interpreters: Overview]]
+- [[#desugaring-our-first-elaborator][Desugaring: Our First Elaborator]]
+  - [[#syntactic-sugar][Syntactic Sugar]]
+- [[#functions-variables-and-substitution][Functions, Variables and Substitution]]
+  - [[#overview-functions][Overview: Functions]]
+- [[#review][Review]]
+  - [[#overview][Overview]]
+  - [[#functional-programming][Functional Programming]]
+  - [[#the-languages-weve-built][The Languages We've Built]]
+- [[#environments-binding-and-scope][Environments, Binding, and Scope]]
   - [[#overview-1][Overview]]
-  - [[#functional-programming-1][Functional Programming]]
-  - [[#the-languages-weve-built-1][The Languages We've Built]]
-- [[#environments-binding-and-scope-1][Environments, Binding, and Scope]]
+  - [[#environments][Environments]]
+  - [[#implementing-let][Implementing Let]]
+- [[#functional-programming-2-first-class-functions][Functional Programming 2: First-Class Functions]]
+  - [[#higher-order-functions][Higher Order Functions]]
+- [[#polymorphic-higher-order-functions][Polymorphic Higher-Order Functions]]
+  - [[#highly-generic-programming][Highly Generic Programming]]
+- [[#implementing-lambdas-with-substitution-and-dynamic-typing][Implementing Lambdas with Substitution and Dynamic Typing]]
+  - [[#broad-strategy][Broad Strategy]]
+- [[#implementing-lambdas-with-environments-closures][Implementing Lambdas with Environments: Closures]]
+  - [[#broad-goals][Broad Goals]]
+  - [[#the-details][The Details]]
+  - [[#but-professor-when-will-i-ever-use-this][But Professor, When Will I Ever Use This?]]
+- [[#midterm-review][Midterm Review]]
   - [[#overview-2][Overview]]
-  - [[#environments-1][Environments]]
-  - [[#implementing-let-1][Implementing Let]]
-- [[#functional-programming-2-first-class-functions-1][Functional Programming 2: First-Class Functions]]
+  -  [[#functional-programming-concepts][Functional Programming Concepts]]
   - [[#higher-order-functions-1][Higher Order Functions]]
-- [[#polymorphic-higher-order-functions-1][Polymorphic Higher-Order Functions]]
-  - [[#highly-generic-programming-1][Highly Generic Programming]]
-- [[#implementing-lambdas-with-substitution-and-dynamic-typing-1][Implementing Lambdas with Substitution and Dynamic Typing]]
-  - [[#broad-strategy-1][Broad Strategy]]
-- [[#implementing-lambdas-with-environments-closures-1][Implementing Lambdas with Environments: Closures]]
+- [[#generative-recursion-and-tail-recursion][Generative Recursion and Tail Recursion]]
   - [[#broad-goals-1][Broad Goals]]
-  - [[#the-details-1][The Details]]
-  - [[#but-professor-when-will-i-ever-use-this-1][But Professor, When Will I Ever Use This?]]
-- [[#midterm-review-1][Midterm Review]]
+  - [[#generative-recursion][Generative Recursion]]
+  - [[#abstracting-generative-recursion][Abstracting Generative Recursion]]
+- [[#currying-and-the-lambda-calculus][Currying and the Lambda Calculus]]
   - [[#overview-3][Overview]]
-  -  [[#functional-programming-concepts-1][Functional Programming Concepts]]
-  - [[#higher-order-functions-2][Higher Order Functions]]
-- [[#generative-recursion-and-tail-recursion-1][Generative Recursion and Tail Recursion]]
-  - [[#broad-goals-2][Broad Goals]]
-  - [[#generative-recursion-1][Generative Recursion]]
-  - [[#abstracting-generative-recursion-1][Abstracting Generative Recursion]]
-- [[#currying-and-the-lambda-calculus-1][Currying and the Lambda Calculus]]
+  - [[#currying][Currying]]
+  - [[#lambda-the-ultimate][Lambda The Ultimate]]
+- [[#store-passing-and-boxes][Store Passing and Boxes]]
   - [[#overview-4][Overview]]
-  - [[#currying-1][Currying]]
-  - [[#lambda-the-ultimate-1][Lambda The Ultimate]]
-- [[#store-passing-and-boxes-1][Store Passing and Boxes]]
-  - [[#overview-5][Overview]]
-  - [[#curly-box-a-language-with-mutation-1][Curly-Box: A Language with Mutation]]
-  - [[#interpreting-boxes-1][Interpreting Boxes]]
-- [[#mutable-variables-1][Mutable Variables]]
-  - [[#curly-mutvar-1][Curly-Mutvar]]
-- [[#implementing-recursion-via-state-1][Implementing Recursion via State]]
-  - [[#recursion-via-state-1][Recursion via State]]
-- [[#objects-and-oop-1][Objects and OOP]]
-  - [[#concepts-of-objects-1][Concepts of Objects]]
-  - [[#curly-obj-immut-1][Curly-Obj-Immut]]
-  - [[#implementing-objects-1][Implementing Objects]]
-- [[#lazy-evaluation-1][Lazy Evaluation]]
-  - [[#lazy-evaluation-2][Lazy Evaluation]]
-- [[#final-exam-review-functional-programming-1][Final Exam Review: Functional Programming]]
-  - [[#functional-programming-what-we-learned-1][Functional Programming: What We Learned]]
-  - [[#purely-functional-programming-1][Purely Functional Programming]]
-  - [[#algebraic-data-types-2][(Algebraic) Data Types]]
-  - [[#higher-order-functions-3][Higher Order Functions]]
-  - [[#tail-recursion-1][Tail Recursion]]
-- [[#final-exam-review-interpreters-1][Final Exam Review: Interpreters]]
-  - [[#interpreters-1][Interpreters]]
-  - [[#syntax-and-the-language-pipeline-1][Syntax and the Language Pipeline]]
-  - [[#environments-2][Environments]]
-  - [[#mutable-state-1][Mutable State]]
-  - [[#alternate-models-of-execution-1][Alternate Models of Execution]]
+  - [[#curly-box-a-language-with-mutation][Curly-Box: A Language with Mutation]]
+  - [[#interpreting-boxes][Interpreting Boxes]]
+- [[#mutable-variables][Mutable Variables]]
+  - [[#curly-mutvar][Curly-Mutvar]]
+- [[#implementing-recursion-via-state][Implementing Recursion via State]]
+  - [[#recursion-via-state][Recursion via State]]
+- [[#objects-and-oop][Objects and OOP]]
+  - [[#concepts-of-objects][Concepts of Objects]]
+  - [[#curly-obj-immut][Curly-Obj-Immut]]
+  - [[#implementing-objects][Implementing Objects]]
+- [[#lazy-evaluation][Lazy Evaluation]]
+  - [[#lazy-evaluation-1][Lazy Evaluation]]
+- [[#final-exam-review-functional-programming][Final Exam Review: Functional Programming]]
+  - [[#functional-programming-what-we-learned][Functional Programming: What We Learned]]
+  - [[#purely-functional-programming][Purely Functional Programming]]
+  - [[#algebraic-data-types-1][(Algebraic) Data Types]]
+  - [[#higher-order-functions-2][Higher Order Functions]]
+  - [[#tail-recursion][Tail Recursion]]
+- [[#final-exam-review-interpreters][Final Exam Review: Interpreters]]
+  - [[#interpreters][Interpreters]]
+  - [[#syntax-and-the-language-pipeline][Syntax and the Language Pipeline]]
+  - [[#environments-1][Environments]]
+  - [[#mutable-state][Mutable State]]
+  - [[#alternate-models-of-execution][Alternate Models of Execution]]
 
 * Introduction
 :PROPERTIES:
